--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				
 				<ul>
 
-					<li><a href=""><h1 id="logo"><img src="img\logo\Reservia.svg"></h1></a></li>
+					<li><a href="#"><h1><img src="img/logo/Reservia.svg" alt="logo reservia"></h1></a></li>
 					
 					<li>
 						<a href="#">Hebergements</a></li>
