--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 		<div class="cards_h">
 			<div class="card_h">
-				<img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+				<img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="visuel activite marseille">
 
 				<div class="description_h"> 
 					<h3>Auberge de Cannebière</h3>
@@ -135,7 +135,7 @@
 
 		
 			<div class="card_h">
-				<img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+				<img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="visuel activite marseille">
 
 				<div class="description_h"> 
 						<h3>Hôtel du port</h3>
@@ -153,7 +153,7 @@
 
 
 			<div class="card_h">
-				<img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+				<img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="visuel activite marseille">
 
 				<div class="description_h"> 
 						<h3>Hôtel Les Mouettes</h3>
@@ -172,7 +172,7 @@
 
 
 			<div class="card_h">
-				<img src="img/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+				<img src="img/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="visuel activite marseille">
 
 				<div class="description_h"> 
 						<h3>Hôtel de la mer</h3>
@@ -191,7 +191,7 @@
 
 
 			<div class="card_h">
-				<img src="img/hebergements/4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+				<img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="visuel activite marseille">
 
 				<div class="description_h"> 
 						<h3>Auberge Le Panier</h3>
@@ -209,7 +209,7 @@
 
 
 			<div class="card_h">
-				<img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+				<img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="visuel activite marseille">
 
 				<div class="description_h"> 
 						<h3>Hôtel chez Amina</h3>
@@ -241,7 +241,7 @@
 
 			<div class="cards_v">
 				<div class="card_v">
-					<img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+					<img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="visuel activite marseille">
 
 					<div class="description_v">
 							<h3>Hôtel Le soleil du matin</h3>
@@ -259,7 +259,7 @@
 			
 
 					<div class="card_v">
-						<img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
+						<img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="visuel activite marseille">
 	
 						<div class="description_v">
 								<h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -277,7 +277,7 @@
 
 
 						<div class="card_v">
-							<img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+							<img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="visuel activite marseille">
 		
 							<div class="description_v">
 									<h3>Hôtel Tout bleu et blanc</h3>
@@ -309,7 +309,7 @@
 		
 		<div class="cardz">
 
-			<img class="cardi" src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+			<img class="cardi" src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="visuel activite marseille">
 			
 			<p><b>Vieux Port</b></p>
 
@@ -322,14 +322,14 @@
 
 			<div class="cardz">
 
-			<img class="cardi2" src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+			<img class="cardi2" src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="visuel activite marseille">
 			
 			<p class="text2"><b>Fort de Pomègues</b></p>
 
 		</div>
 		<div class="cardz">
 
-			<img class="cardi3" src="img/activites/4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
+			<img class="cardi3" src="img/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="visuel activite marseille">
 			
 					<p class="text3"><b>îles du Frioul</b></p>
 	
@@ -344,7 +344,7 @@
 
 		<div class="cardz">
 
-		<img class="cardi4" src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+		<img class="cardi4" src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="visuel activite marseille">
 		
 				<p class="text4"><b>Parc National des Calanques</b></p>
 
@@ -358,7 +358,7 @@
 
 		<div class="cardz">
 
-		<img class="cardi5" src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+		<img class="cardi5" src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="visuel activite marseille">
 		
 				<p class="text5"><b>Notre-Dame-de-la-Garde</b></p>
 
@@ -367,7 +367,7 @@
 
 			<div class="cardz">
 		
-				<img class="cardi6" src="img/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
+				<img class="cardi6" src="img/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="visuel activite marseille">
 				
 					<p class="text6"><b>Parc Longchamps</b></p>
 	
