--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>RESERVIA</title>
 
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">	
+		<!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">	 -->
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 	</head>
@@ -61,7 +61,7 @@
 
 	<section class="enveloppe_filtres">
 
-		<div class="filtre_text">Filtres</div>
+		<h2 class="filtre_text">Filtres</h2>
 
 		<div class="fusion">
 
@@ -317,10 +317,11 @@
 
 	<!-- DERNIER BLOC -->
 
+<section>
 
 	<h2 class="marseille" id="activites">Activités à Marseille</h2>
 
-<section class="blocs">
+<div class="blocs">
 
 	<div class="bloc3">
 		
@@ -397,6 +398,8 @@
 		</a> 
 
 	</div>
+
+</div>
 
 </section>
 
