FIX SURVOL BOUTON

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 <!-- ELEMENT IMPORTANT POUR QUE MA PAGE SOIT RESPONSIVE -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <title>RESERVIA</title>
 
-		<!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">	 -->
         <link rel="stylesheet" type="text/css" href="css/styles.css">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 	</head>
@@ -117,7 +116,7 @@
 			
 				<div class="card_h">
 					<a href="">
-					<img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="visuel activite marseille">
+					<img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="visuel chambre Auberge de Cannebière Marseille | Reservia">
 
 					<div class="description_h"> 
 						<h3>Auberge de Cannebière</h3>
@@ -137,7 +136,7 @@
 			
 				<div class="card_h">
 					<a href="">
-					<img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="visuel activite marseille">
+					<img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="visuel chambre Hôtel du port Marseille | Reservia">
 
 					<div class="description_h"> 
 							<h3>Hôtel du port</h3>
@@ -157,7 +156,7 @@
 
 			<div class="card_h">
 				<a href="">
-				<img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="visuel activite marseille">
+				<img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="visuel chambre Hôtel Les Mouettes Marseille | Reservia">
 
 				<div class="description_h"> 
 						<h3>Hôtel Les Mouettes</h3>
@@ -177,7 +176,7 @@
 
 			<div class="card_h">
 				<a href="">
-				<img src="img/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="visuel activite marseille">
+				<img src="img/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="visuel chambre Hôtel de la mer Marseille | Reservia">
 
 				<div class="description_h"> 
 						<h3>Hôtel de la mer</h3>
@@ -197,7 +196,7 @@
 
 			<div class="card_h">
 				<a href="">
-				<img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="visuel activite marseille">
+				<img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="visuel chambre Auberge Le Panier Marseille | Reservia">
 
 				<div class="description_h"> 
 						<h3>Auberge Le Panier</h3>
@@ -216,7 +215,7 @@
 
 			<div class="card_h">
 				<a href="">
-				<img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="visuel activite marseille">
+				<img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="visuel chambre Hôtel chez Amina Marseille | Reservia">
 
 				<div class="description_h"> 
 						<h3>Hôtel chez Amina</h3>
@@ -247,14 +246,12 @@
 			<i class="fas fa-chart-line"></i>
 		</div>
 
-		
-			
 	
 				<div class="cards_v">
 					<a href="">		
 					<div class="card_v">
 		
-						<img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="visuel activite marseille">
+						<img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="visuel chambre Hôtel Le soleil du matin marseille | Reservia">
 
 						<div class="description_v">
 								<h3>Hôtel Le soleil du matin</h3>
@@ -274,7 +271,7 @@
 				<a href="">
 					<div class="card_v">
 				
-						<img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="visuel activite marseille">
+						<img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="visuel Au coeur de l'eau Chambres d'hôtes Marseille | Reservia">
 	
 						<div class="description_v">
 								<h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -293,7 +290,7 @@
 
 						<a href="">
 							<div class="card_v">
-								<img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="visuel activite marseille">
+								<img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="visuel chambre Hôtel Tout bleu et blanc Marseille | Reservia">
 			
 								<div class="description_v">
 									<h3>Hôtel Tout bleu et blanc</h3>
@@ -328,7 +325,7 @@
 		<a href="">
 
 			<div class="cardz">
-				<img class="cardi" src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="visuel activite marseille">
+				<img class="cardi" src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="visuel activite Vieux Port Marseille | Reservia">
 				<p><b>Vieux Port</b></p>
 			</div>
 
@@ -343,7 +340,7 @@
 		<a href="">
 			<div class="cardz">
 
-				<img class="cardi2" src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="visuel activite marseille">
+				<img class="cardi2" src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="visuel activite Fort de Pomègues Marseille | Reservia">
 				<p class="text2"><b>Fort de Pomègues</b></p>
 
 			</div>
@@ -353,7 +350,7 @@
 		<a href="">
 			<div class="cardz">
 
-				<img class="cardi3" src="img/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="visuel activite marseille">
+				<img class="cardi3" src="img/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="visuel activite marseille | Reservia">
 				<p class="text3"><b>îles du Frioul</b></p>
 	
 			</div>
@@ -367,7 +364,7 @@
 		 <a href="">
 			<div class="cardz">
 			
-				<img class="cardi4" src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="visuel activite marseille">
+				<img class="cardi4" src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="visuel activite Parc National des Calanques Marseille | Reservia">
 				<p class="text4"><b>Parc National des Calanques</b></p>
 		
 			</div>
@@ -381,7 +378,7 @@
 		 <a href="">
 			<div class="cardz">
 
-				<img class="cardi5" src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="visuel activite marseille">
+				<img class="cardi5" src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="visuel activite Notre-Dame-de-la-Garde Marseille | Reservia">
 				<p class="text5"><b>Notre-Dame-de-la-Garde</b></p>
 			
 			</div>
@@ -391,7 +388,7 @@
 		<a href="">
 			<div class="cardz">
 				
-				<img class="cardi6" src="img/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="visuel activite marseille">
+				<img class="cardi6" src="img/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="visuel activite Parc Longchamps marseille | Reservia">
 				<p class="text6"><b>Parc Longchamps</b></p>
 			
 			</div>
@@ -413,7 +410,7 @@
 
 
 
-	<footer>
+		<footer>
 
 			<ul>
 				<li>A propos</li>
